--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>BookList</title>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@500&display=swap" rel="stylesheet">
     <a href="https://icons8.com/icon/38390/open-book"></a>
@@ -28,6 +28,6 @@
     </thead>
 </table>
    
-<script type="text/javascript" src="./bookapp.js" defer></script>
+<script type="text/javascript" src="./js/bookapp.js" defer></script>
 </body>
 </html>
